--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700"
+    rel="stylesheet">
 </head>
 
 <body>
-  <header class="header"> 
+  <header class="header">
     <div class="container">
       <nav class="nav">
         <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
@@ -49,7 +52,8 @@
               </svg>
             </div>
             <h3 class="list-title">Strategy</h3>
-            <p class="services-list-description">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            <p class="services-list-description">Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.</p>
           </li>
           <li class="list-item">
             <div class="adv-link-wrapper">
@@ -58,7 +62,8 @@
               </svg>
             </div>
             <h3 class="list-title">Punctuality</h3>
-            <p class="services-list-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <p class="services-list-description">Bring the key message to the brand's audience for the best price within
+              the shortest possible time.</p>
           </li>
           <li class="list-item">
             <div class="adv-link-wrapper">
@@ -67,7 +72,8 @@
               </svg>
             </div>
             <h3 class="list-title">Diligence</h3>
-            <p class="services-list-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <p class="services-list-description">Research and confirm brands that present the strongest digital growth
+              opportunities and minimize risk.</p>
           </li>
           <li class="list-item">
             <div class="adv-link-wrapper">
@@ -76,7 +82,8 @@
               </svg>
             </div>
             <h3 class="list-title">Technologies</h3>
-            <p class="services-list-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            <p class="services-list-description">Design practice focused on digital experiences. We bring forth a deep
+              passion for problem-solving.</p>
           </li>
         </ul>
       </div>
@@ -87,31 +94,158 @@
         <ul class="list">
           <li class="team-card">
             <img src="./images/mark.jpg" alt="Product Designer" width="264">
-            <div class="border-container">
-              <h3 class="list-title">Mark Guerrero</h3>
-              <p class="desctiption">Product Designer</p>
-            </div>
+            <!-- <div class="border-container"> -->
+            <h3 class="list-title">Mark Guerrero</h3>
+            <p class="description">Product Designer</p>
+            <ul class="socials list">
+              <li class="socials-items">
+                <a class="socials-link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"
+                  aria-label="Link to Instagram">
+                  <svg aria-label="instagram" class="adv-icon socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-items">
+                <a class="socials-link" href="https://x.com" target="_blank" rel="noopener no-referrer"
+                  aria-label="Link to Twitter"><svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-items">
+                <a class="socials-link" href="https://facebook.com" target="_blank" rel="noopener no-referrer"
+                  aria-label="Link to Facebook">
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-items">
+                <a class="socials-link" href="https://www.linkedin.com" target="_blank" rel="noopener no-referrer"
+                  aria-label="Link to Linkedin">
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <!-- </div> -->
+
           </li>
           <li class="team-card">
             <img src="./images/tom.jpg" alt="Frontend Developer" width="264">
-            <div class="border-container">
-              <h3 class="list-title">Tom Ford</h3>
-              <p class="desctiption">Frontend Developer</p>
-            </div>
+            <h3 class="list-title">Tom Ford</h3>
+            <p class="description">Frontend Developer</p>
+            <ul class="socials list">
+              <li class="socials-items">
+                <a class="socials-link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"
+                  aria-label="Link to Instagram">
+                  <svg aria-label="instagram" class="adv-icon socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-items">
+                <a class="socials-link" href="https://x.com" target="_blank" rel="noopener no-referrer"
+                  aria-label="Link to Twitter"><svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-items">
+                <a class="socials-link" href="https://facebook.com" target="_blank" rel="noopener no-referrer"
+                  aria-label="Link to Facebook">
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-items">
+                <a class="socials-link" href="https://www.linkedin.com" target="_blank" rel="noopener no-referrer"
+                  aria-label="Link to Linkedin">
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="team-card">
             <img src="./images/camila.jpg" alt="Marketing" width="264">
-            <div class="border-container">
-              <h3 class="list-title">Camila Garcia</h3>
-              <p class="desctiption">Marketing</p>
-            </div>
+            <h3 class="list-title">Camila Garcia</h3>
+            <p class="description">Marketing</p>
+            <ul class="socials list">
+              <li class="socials-items">
+                <a class="socials-link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"
+                  aria-label="Link to Instagram">
+                  <svg aria-label="instagram" class="adv-icon socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-items">
+                <a class="socials-link" href="https://x.com" target="_blank" rel="noopener no-referrer"
+                  aria-label="Link to Twitter"><svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-items">
+                <a class="socials-link" href="https://facebook.com" target="_blank" rel="noopener no-referrer"
+                  aria-label="Link to Facebook">
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-items">
+                <a class="socials-link" href="https://www.linkedin.com" target="_blank" rel="noopener no-referrer"
+                  aria-label="Link to Linkedin">
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="team-card">
             <img src="./images/daniel.jpg" alt="UI Designer" width="264">
-            <div class="border-container">
-              <h3 class="list-title">Daniel Wilson</h3>
-              <p class="desctiption">UI Designer</p>
-            </div>
+            <h3 class="list-title">Daniel Wilson</h3>
+            <p class="description">UI Designer</p>
+            <ul class="socials list">
+              <li class="socials-items">
+                <a class="socials-link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"
+                  aria-label="Link to Instagram">
+                  <svg aria-label="instagram" class="adv-icon socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-items">
+                <a class="socials-link" href="https://x.com" target="_blank" rel="noopener no-referrer"
+                  aria-label="Link to Twitter"><svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-items">
+                <a class="socials-link" href="https://facebook.com" target="_blank" rel="noopener no-referrer"
+                  aria-label="Link to Facebook">
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-items">
+                <a class="socials-link" href="https://www.linkedin.com" target="_blank" rel="noopener no-referrer"
+                  aria-label="Link to Linkedin">
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
@@ -168,8 +302,67 @@
   </main>
   <footer class="footer">
     <div class="container">
-      <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
-      <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <div>
+        <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
+        <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing &
+          growth solutions.</p>
+      </div>
+      <div class="footer-socials-container">
+        <p class="footer-socials-subtitle">Social media</p>
+        <ul class="footer-socials list">
+          <li class="footer-socials-items">
+            <a
+              class="footer-socials-link"
+              href="https://www.instagram.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Link to Instagram"
+            >
+              <svg class="footer-socials-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-items">
+            <a
+              class="footer-socials-link"
+              href="https://x.com"
+              target="_blank"
+              rel="noopener no-referrer"
+              aria-label="Link to Twitter"
+              ><svg class="footer-socials-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-items">
+            <a
+              class="footer-socials-link"
+              href="https://facebook.com"
+              target="_blank"
+              rel="noopener no-referrer"
+              aria-label="Link to Facebook"
+            >
+              <svg class="footer-socials-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-items">
+            <a
+              class="footer-socials-link"
+              href="https://www.linkedin.com"
+              target="_blank"
+              rel="noopener no-referrer"
+              aria-label="Link to Linkedin"
+            >
+              <svg class="footer-socials-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
